# pandoc-contrib

./: .travis.yml  README.md  pandoc-contrib.cabal
lib/Text/Pandoc/Filters/: ShortcutLinks.hs  Utils.hs
src/: shortcut-links.hs
