name:                pandoc-contrib
version:             0.1.0.0
synopsis:            Extra filters/modules for Pandoc
description:         Extra filters/modules for Pandoc
homepage:            https://github.com/aelve/pandoc-contrib
license:             BSD3
license-file:        LICENSE
author:              various
maintainer:          various (see individual modules)
-- copyright:           
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Source-repository head
  type:          git
  location:      git://github.com/aelve/pandoc-contrib.git

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.5 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010