name:                pandoc-contrib
version:             0.1.0.0
synopsis:            Extra filters/modules for Pandoc
description:         Extra filters/modules for Pandoc
homepage:            https://github.com/aelve/pandoc-contrib
license:             BSD3
license-file:        LICENSE
author:              various
maintainer:          various (see individual modules)
-- copyright:           
category:            Text
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Source-repository head
  type:          git
  location:      git://github.com/aelve/pandoc-contrib.git

library
  exposed-modules:     Text.Pandoc.Filters.ShortcutLinks
  other-modules:       Text.Pandoc.Filters.Utils
  -- other-extensions:    
  build-depends:       base >= 4.5 && < 5
                     , pandoc-types == 1.16.*
                     , parsec >= 3
                     , shortcut-links >= 0.4.1 && < 0.5
                     , text
  hs-source-dirs:      lib
  default-language:    Haskell2010
  buildable:           True

executable pandoc-shortcut-links
  main-is:             shortcut-links.hs
  build-depends:       base >= 4.5 && < 5
                     , pandoc-contrib
                     , pandoc-types == 1.16.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  buildable:           True
